<?xml version="1.0"?>
<package format="2">
  <name>clober_gazebo</name>
  <version>0.0.0</version>
  <description>The clober_gazebo package</description>
  <maintainer email="ros@clobot.co.kr">clobot-git</maintainer>

  <license>clobot-git</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
